<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.techhexor.dpdcprinter.MainActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20sp">

        <TextView
            android:id="@+id/textview"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:text="@string/printer_name" />

    </LinearLayout>

    <EditText
        android:id="@+id/msg_box"
        android:layout_width="fill_parent"
        android:layout_height="300sp"
        android:layout_marginTop="10sp"
        android:layout_marginBottom="10sp"
        android:gravity="start"
        android:hint="Paste Your Message"
        android:inputType="textMultiLine"
        android:paddingStart="20sp"
        android:paddingLeft="0.0dip"
        android:paddingRight="0.0dip"
        android:textAlignment="textStart"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:textSize="12sp"
        android:typeface="monospace" />

    <LinearLayout
        android:id="@+id/bottom_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#fff"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">

                <Button
                    android:id="@+id/btn_cnct"
                    style="android:buttonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_connect" />

                <Button
                    android:id="@+id/btn_print"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_print" />

                <Button
                    android:id="@+id/btn_format"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_format" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">

                <Button
                    android:id="@+id/btn_disconnect"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Disconnect" />

                <Button
                    android:id="@+id/btn_all_message"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_all_message" />

                <Button
                    android:id="@+id/btn_clear"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_clear" />

            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

</LinearLayout>